--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -29,14 +30,95 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
+}
+
+ext {
+
+    /** Android API Extension */
+    coreKtx = '1.6.0'
+
+    /** APIs Support */
+    appCompat = '1.3.1'
+
+    /** Design */
+    materialDesign = '1.4.0'
+    glide = '4.12.0'
+
+    /** Coroutines */
+    coroutines = '1.4.2'
+
+    /** Lifecycle */
+    lifecycle = '2.3.1'
+    lifecycleExt = '2.2.0'
+
+    /** Dependency Injection*/
+    dagger = '2.39.1'
+
+    /** Networking */
+    retrofit = '2.9.0'
+
+    /** OkHttp Client */
+    okHttp = '4.9.1'
+
+    /** Parser */
+    moshi = '1.12.0'
+
+    /** Linters */
+    ktlint = '0.42.0'
+    detekt = '1.18.1'
+
+    /** Testing */
+    junit = '4.13.2'
+    junitInstrumental = '1.1.3'
+    espresso = '3.4.0'
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    /** Android API Extension */
+    implementation "androidx.core:core-ktx:$coreKtx"
+
+    /** APIs Support */
+    implementation "androidx.appcompat:appcompat:$appCompat"
+
+    /** Lifecycle */
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleExt"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle"
+
+    /** Coroutines */
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
+
+    /** Design */
+    implementation "com.google.android.material:material:$materialDesign"
+    implementation "com.github.bumptech.glide:glide:$glide"
+
+    /** Dependency Injection */
+    implementation "com.google.dagger:dagger:$dagger"
+    kapt "com.google.dagger:dagger-compiler$dagger"
+
+    /** Networking */
+    implementation "com.squareup.retrofit2:retrofit:$retrofit"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit"
+
+    /** OkHttp Client */
+    implementation "com.squareup.okhttp3:okhttp:$okHttp"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okHttp"
+
+    /** Parser */
+    implementation "com.squareup.moshi:moshi-kotlin:$moshi"
+    implementation "com.squareup.moshi:moshi-adapters:$moshi"
+
+    implementation "com.treebo:internetavailabilitychecker:1.0.4"
+
+    /** Testing */
+    testImplementation "junit:junit:$junit"
+    androidTestImplementation "androidx.test.ext:junit:$junitInstrumental"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso"
 }
